# BladeRecon

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  report_quality_feedback.md
.github/workflows/: ci.yml
bladerecon/: __init__.py  __main__.py  main.py
bladerecon/modules/: __init__.py  advanced.py  endpoints.py  intelligence.py  js.py  nuclei.py  parameters.py  probe.py  report.py  screenshots.py  secrets.py  subdomains.py  utils.py
bladerecon/templates/: report.html.j2
bladerecon/wordlists/: common_parameters.txt  subdomains.txt
tests/: test_advanced.py  test_endpoints.py  test_intelligence.py  test_js.py  test_main.py  test_nuclei.py  test_parameters.py  test_probe.py  test_report.py  test_screenshots.py  test_secrets.py  test_subdomains.py  test_utils.py
